service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
  labels:
    app: go-service
spec:
  ports:
  - port: 8088
    targetPort: 8080
  selector:
    app: go-service
  type: LoadBalancer
