virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-service-vs
spec:
  hosts:
  - go-service.example.com
  http:
  - route:
    - destination:
        host: go-service
        subset: v1
      weight: 70
    - destination:
        host: go-service
        subset: v2
      weight: 20
    - destination:
        host: go-service
        subset: v3
      weight: 10
